Fixed logo on mobile and about on tablet

--- a/assets/css/scss/_layout.scss
+++ b/assets/css/scss/_layout.scss
@@ -262,6 +262,7 @@ footer {
 
 
 .bestlists {
+	
 	display: flex;
 	max-width: 1120px;
 	padding: 54px var(--Number, 0px);
@@ -272,17 +273,21 @@ footer {
 	align-self: stretch;
 	border-top: 3px solid #29292B;
 	
-	@include mobile {
+	@include tablet {
 		display: block;
 	}
+	
+	
 
 	ul {
+		
 		display: flex;
-		width: 200px;
-		min-width: 200px;
+		width: auto;
+		min-width: 100px;
 		flex-direction: column;
 		align-items: flex-start;
 		gap: 24px;
+		
 	}
 	
 	 li {
