--- a/assets/css/scss/_main.scss
+++ b/assets/css/scss/_main.scss
@@ -13,8 +13,8 @@
 
 		@include tablet {padding: 0 18px; }
 		@include mobile {
-			padding: 54px 18px 0;
-			margin: 49px 0 0 0;
+			padding: 12px 18px 0;
+			margin: 12px 0 0 0;
 		}
 	}
 	#intro a {
@@ -30,6 +30,9 @@
 		max-width: 200px;
 		top: 0;
     	position: relative;
+		@include mobile {
+			max-width: 125px;
+		}
 	}
 
 	#intro p  {
@@ -268,11 +271,12 @@
 .cases {
 	max-width: 1140px;
 	margin: 0 auto;
-	padding: 18px 0 36px;
+	padding: 18px 18px 36px;
 	width: 100%;
 	min-width: 0;
 	border-top: 3px solid #eaeaea;
 	
+	@include tablet {}
 	h4 {
 		font-family: $font-family--secondary; 
 		font-size: 18px;
